[package]
name = "toanime-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3" # Framework web untuk Rust
reqwest = "0.11" # Untuk mengunduh gambar dari URL
tokio = { version = "1", features = ["full"] } # Runtime async
serde = { version = "1.0", features = ["derive"] } # Untuk serialisasi/deserialisasi JSON
serde_json = "1.0"
